[gd_scene load_steps=6 format=3 uid="uid://cp0ksoq861b6g"]

[ext_resource type="Script" path="res://SCRIPTS/tela_jokenpo.gd" id="1_dyuid"]
[ext_resource type="Texture2D" uid="uid://bmp8wkgdw2crj" path="res://artes sorte/jokenpo00.png" id="1_vmrrd"]
[ext_resource type="PackedScene" uid="uid://c7xlwwjog13jf" path="res://CENAS/button_casa.tscn" id="2_751l8"]
[ext_resource type="PackedScene" uid="uid://baq0dr8wiuwhu" path="res://CENAS/progress_bar.tscn" id="4_27u7i"]
[ext_resource type="Texture2D" uid="uid://bosbtpd1bnxro" path="res://artes sorte/IMGmao.jpg" id="5_gvobn"]

[node name="tela_JOKENPO" type="Node2D"]
script = ExtResource("1_dyuid")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 807.0
offset_bottom = 610.0
color = Color(0.622929, 0.666508, 0.659105, 1)

[node name="Jokenpo00" type="Sprite2D" parent="."]
position = Vector2(391, 81)
texture = ExtResource("1_vmrrd")

[node name="Button_CASA" parent="." instance=ExtResource("2_751l8")]
offset_left = 677.0
offset_top = 8.0
offset_right = 794.0
offset_bottom = 123.0

[node name="Button_JOG" type="Button" parent="."]
offset_left = 305.0
offset_top = 240.0
offset_right = 497.0
offset_bottom = 314.0
text = "JOGAR"

[node name="ProgressBar" parent="." instance=ExtResource("4_27u7i")]
offset_left = 354.0
offset_top = 338.0
offset_right = 455.0
offset_bottom = 450.0

[node name="Sprite2D_resultado" type="Sprite2D" parent="."]
position = Vector2(399, 523)
scale = Vector2(1.80469, 1.73242)
texture = ExtResource("5_gvobn")

[connection signal="pressed" from="Button_JOG" to="." method="_on_button_jog_pressed"]
